Fix z-index for modal.

--- a/client/src/assets/scss/style.scss
+++ b/client/src/assets/scss/style.scss
@@ -652,7 +652,7 @@ img.avatar {
     right: 0px;
     bottom: 0px;
     left: 0px;
-    z-index: 100;
+    z-index: 105;
     background: rgba(255, 255, 255, 0.8);
     &.m-hide {
       display: none !important;
